Networking layer impl.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -19,6 +19,7 @@ danglingParentheses = true
 indentOperator = spray
 maxColumn = 120
 newlines.alwaysBeforeTopLevelStatements = true
+newlines.beforeCurlyLambdaParams = multilineWithCaseOnly
 project.excludeFilters = [".*\\.sbt"]
 rewrite.rules = [RedundantParens, RedundantBraces, SortImports, SortModifiers]
 rewrite.sortModifiers.order = [
