Complete networking layer impl.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
-local-name = "node1"
-bind-address = "127.0.0.1:9030"
-known-peers = ["127.0.0.1:9031"]
+local-name = "node"
+bind-address = "127.0.0.1:9031"
+known-peers = ["127.0.0.1:9030"]
 min-connections = 3
 max-connections = 20
 connection-timeout = 15s
