--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
-local-name = "node"
-bind-address = "127.0.0.1:9031"
-known-peers = ["127.0.0.1:9030"]
-min-connections = 3
-max-connections = 20
-connection-timeout = 15s
+http.bind-address = "127.0.0.1:8081"
+network.local-name = "node"
+network.bind-address = "127.0.0.1:9030"
+network.known-peers = ["127.0.0.1:9031"]
+network.min-connections = 3
+network.max-connections = 20
+network.connection-timeout = 15s
