--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,14 @@
 http.bind-address = "127.0.0.1:8081"
+http.bind-address = ${?HTTP_ADDRESS}
 network.local-name = "node"
+network.local-name = ${?NODE_NAME}
 network.bind-address = "127.0.0.1:9030"
+network.bind-address = ${?TCP_ADDRESS}
 network.known-peers = ["127.0.0.1:9031"]
+network.known-peers = [${?PEER_1}, ${?PEER_2}]
 network.min-connections = 3
+network.min-connections = ${?MIN_CONN}
 network.max-connections = 20
+network.max-connections = ${?MAX_CONN}
 network.connection-timeout = 15s
+network.connection-timeout = ${?CONN_TIMEOUT}
